# disser

./: CMakeLists.txt  Otzyv_nauchnogo_rukovoditelya.doc  Otzyv_opponenta.doc  diss.docx  disser.vsd  test.m  test_f.m  test_f2.m  Презентация.ppt
short/: sarychev_lupin.doc
test1/pth/: CMakeLists.txt  main.cpp
test1/pthread/: CMakeLists.txt  main.cpp
test2/: CMakeLists.txt  main.cpp
test3/: CMakeLists.txt  main.cpp  mex.c  st.cpp  test.m  test.sh  test2.m  test_cases.cpp  test_cases.h  timer.cpp  timer.h  united_test.m
test3/measurements/: 1.1.fig  1.2.fig  2.1.fig  2.1b.fig  2.2.fig  2.2b.fig  3.1.fig  3.2.fig  4.1.fig  4.2.fig  5.1.fig  5.2.fig  6.1.fig  6.2.fig  7.1.fig  7.2.fig  8.1.fig  8.2.fig  matlab.mat  measurements.mat  measurements2.mat  measurements3.mat
